Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/test CsScript typelib.cs
out
 __ComActivator_CreateManifest "$qm$\qmcs.dll" 3

typelib QMCS "$qm$\qmcs.tlb" 1

QMCS.CsScript x.Call